# paperlesslabels

./: AveryLabels.py  README.md  labels.py  pyproject.toml
